--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
 	"root": true,
 	"env": {
 		"node": true,
-		"es6": true
+		"es6": true,
+		"jest/globals": true
 	},
 	"rules": {
 		"no-console": 0,
