--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.16.1"
+  },
+  "devDependencies": {
+    "jest": "^27.4.7"
   }
 }
